--- a/package.json
+++ b/package.json
@@ -13,21 +13,29 @@
     "start": "nodemon server/index.js"
   },
   "dependencies": {
+    "@google-cloud/vision": "^1.11.0",
     "axios": "^0.19.2",
     "bluebird": "^3.7.2",
     "body-parser": "^1.19.0",
+    "bulma": "^0.8.2",
     "express": "^4.17.1",
-    "faker": "^4.1.0",
+    "install": "^0.13.0",
     "mysql": "^2.18.1",
     "nodemon": "^1.19.4",
+    "npm": "^6.14.4",
     "react": "^16.12.0",
-    "react-dom": "^16.12.0"
+    "react-dom": "^16.12.0",
+    "regenerator-runtime": "^0.13.5"
   },
   "devDependencies": {
     "@babel/core": "^7.8.3",
     "@babel/preset-env": "^7.8.3",
     "@babel/preset-react": "^7.8.3",
-    "babel-loader": "^8.0.6",
+    "babel-core": "^6.26.3",
+    "babel-loader": "^8.1.0",
+    "babel-polyfill": "^6.26.0",
+    "babel-preset-es2015": "^6.24.1",
+    "babel-preset-stage-0": "^6.24.1",
     "webpack": "^4.41.5",
     "webpack-cli": "^3.3.10"
   }
