--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "bluebird": "^3.7.2",
     "body-parser": "^1.19.0",
     "bulma": "^0.8.2",
+    "ejs": "^3.0.2",
     "express": "^4.17.1",
     "install": "^0.13.0",
     "mysql": "^2.18.1",
